<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellerOrderPage">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="388dp"
        android:layout_height="229dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/orderCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="Completed:"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/orderCustomer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="Customer Name:"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/orderAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="Delivery Address:"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/orderPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="Phone Number:"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/orderTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="Time placed:"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/orderDeliveryTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="Time to deliver:"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/orderTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="Total ($):"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/Home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickHome"
            android:text="Home"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickMenu"
            android:text="Menu"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickOrder"
            android:text="Order"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/Account_Profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:backgroundTint="@color/white"
            android:onClick="clickAccount"
            android:text="Account"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="401dp"
        android:layout_height="52dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderLv"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/orderBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="5dp"
            android:text="Back" />

        <Button
            android:id="@+id/orderComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="10dp"
            android:insetRight="10dp"
            android:text="Complete Order" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="409dp"
        android:layout_height="42dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/orderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Order #:"
            android:textColor="#000000"
            android:textSize="24sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/orderLv"
        android:layout_width="410dp"
        android:layout_height="309dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>